--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,12 +1,26 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.tian.gankgirl.ui.fragment.MainFragment">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                tools:context="com.tian.gankgirl.ui.fragment.MainFragment">
 
   <com.jcodecraeer.xrecyclerview.XRecyclerView
       android:id="@+id/xv"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"></com.jcodecraeer.xrecyclerview.XRecyclerView>
+      android:layout_height="match_parent"
+      ></com.jcodecraeer.xrecyclerview.XRecyclerView>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_arrow_upward"
+        app:layout_behavior="com.tian.gankgirl.view.HideBehavior"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="67dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"/>
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
