--- a/app/src/main/res/layout/main_item_layout.xml
+++ b/app/src/main/res/layout/main_item_layout.xml
@@ -12,15 +12,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <android.support.v7.widget.CardView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         app:cardElevation="0dp"
         app:cardCornerRadius="5dp"
+        app:cardBackgroundColor="@color/mainColor"
+        android:layout_margin="5dp"
         android:id="@+id/view">
     <ImageView
         android:id="@+id/img"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"/>
     </android.support.v7.widget.CardView>
     <TextView
         android:id="@+id/desc"
