--- a/app/src/main/res/layout/main_item_layout.xml
+++ b/app/src/main/res/layout/main_item_layout.xml
@@ -7,6 +7,7 @@
     app:cardElevation="5dp"
     app:cardCornerRadius="5dp"
     android:layout_margin="5dp"
+    android:foreground="?android:attr/selectableItemBackground"
     >
 <RelativeLayout
     android:layout_width="match_parent"
@@ -23,6 +24,7 @@
         android:id="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:transitionName="girlgirl"
         android:scaleType="fitXY"/>
     </android.support.v7.widget.CardView>
     <TextView
