--- a/app/src/main/res/layout/vedio_item_layout.xml
+++ b/app/src/main/res/layout/vedio_item_layout.xml
@@ -7,6 +7,7 @@
     app:cardElevation="5dp"
     app:cardCornerRadius="5dp"
     android:layout_margin="5dp"
+    android:foreground="?android:attr/selectableItemBackground"
     >
 <RelativeLayout
     android:layout_width="match_parent"
