--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,14 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         ></android.support.v4.view.ViewPager>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_arrow_upward"
+        app:layout_behavior="com.tian.gankgirl.view.HideBehavior"
+        android:layout_margin="15dp"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
