--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,26 +1,17 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                                                 android:fitsSystemWindows="true"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 tools:context="com.tian.gankgirl.ui.fragment.MainFragment">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
   <com.jcodecraeer.xrecyclerview.XRecyclerView
       android:id="@+id/xv"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       ></com.jcodecraeer.xrecyclerview.XRecyclerView>
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:src="@drawable/ic_arrow_upward"
-        app:layout_behavior="com.tian.gankgirl.view.HideBehavior"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="67dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"/>
 
-</android.support.design.widget.CoordinatorLayout>
+
+</RelativeLayout>
