--- a/app/src/main/res/layout/main_item_layout.xml
+++ b/app/src/main/res/layout/main_item_layout.xml
@@ -11,7 +11,8 @@
     >
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/cehsi">
     <android.support.v7.widget.CardView
         android:layout_width="90dp"
         android:layout_height="90dp"
