--- a/app/src/main/res/layout/vedio_item_layout.xml
+++ b/app/src/main/res/layout/vedio_item_layout.xml
@@ -10,20 +10,14 @@
     android:foreground="?android:attr/selectableItemBackground"
     >
 <RelativeLayout
+    android:id="@+id/cehsi"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <android.support.v7.widget.CardView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="5dp"
-        android:id="@+id/view">
-    <ImageView
-        android:id="@+id/img"
-        android:visibility="gone"
+    <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
+        android:id="@+id/videoplayer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    </android.support.v7.widget.CardView>
+        android:layout_height="200dp"/>
+
     <TextView
         android:id="@+id/desc"
         android:layout_width="wrap_content"
@@ -31,6 +25,8 @@
         android:text="描述"
         android:textSize="16sp"
         android:layout_marginLeft="10dp"
+        android:singleLine="true"
+        android:maxLines="1"
         android:layout_marginTop="10dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -43,6 +39,7 @@
         android:textSize="16sp"
         android:layout_marginLeft="10dp"
         android:layout_marginEnd="40dp"
+        android:visibility="gone"
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"/>
 </RelativeLayout>
